<resources>
    <string name="app_name">MoviesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_page_welcome_header">Hi, Welcome Back!</string>
    <string name="main_logo">Main Logo</string>
    <string name="email_question">Enter your email</string>
    <string name="password_question">Enter your password</string>
    <string name="sign_in_btn_text">Sign in</string>
    <string name="sign_up_question">Dont have an account?</string>
    <string name="sign_up_text">Sign Up</string>
</resources>